# CloudCompareTool

./: CMakeCache.txt  CMakeLists.txt  CloudCompareTool-user.doc  README.md  cloudcompare.pro
CC/: CC.pro
CC/include/: ReferenceCloud.h
CC/src/: ReferenceCloud.cpp
ccViewer/: CMakeLists.txt
cmake/: CMakeExternalLibs.cmake
config/: Name.map  PluginPath (复件).xml  PluginPath.xml  ToolConfig.xml
dpxMap/: CMakeLists.txt  dpxDataPretreat.cpp  dpxDataPretreat.h  dpxFeature.cpp  dpxGeoEngine.cpp  dpxGeoEngine.h  dpxLayer.cpp  dpxLayer.h  dpxMap.cpp  dpxMap.h  dpxMapCommonFunc.cpp  dpxMapCommonFunc.h  dpxMapDefine.h  dpxMapManager.cpp  dpxMapManager.h  dpxMap_IO.h  dpxProtobufReader.cpp  dpxProtobufReader.h  dpxProtobufWriter.cpp  dpxProtobufWriter.h  dpxReader.h  dpxWriter.h
libs/qCC_db/: ccColorTypes.h  ccCone.cpp  ccGLDrawContext.h  ccGenericPointCloud.cpp  ccGenericPrimitive.h  ccHObject.cpp  ccHObject.h  (+7 more)
map_param/: CMakeCache.txt  CMakeLists.txt  attribute.pb.h  geometry.pb.cc  geometry.pb.h  id.pb.cc  id.pb.h  lane.pb.cc  lane.pb.h  lane_marking.pb.cc  lane_marking.pb.h  map.pb.cc  map.pb.h  mapio.cc  mapio.h  object.pb.cc  object.pb.h  parking_space.pb.cc  parking_space.pb.h  section.pb.cc  section.pb.h  tile.pb.cc  tile.pb.h  traffic_light.pb.cc  traffic_light.pb.h  traffic_sign.pb.cc  traffic_sign.pb.h
map_param/include/: MapParam_HDmap_IO.h
map_param/proto/: attribute.pb.cc  attribute.pb.h  attribute_pb2.py  geometry.pb.cc  geometry.pb.h  geometry_pb2.py  id.pb.cc  id.pb.h  id_pb2.py  lane.pb.cc  lane.pb.h  lane_marking.pb.cc  lane_marking.pb.h  lane_marking_pb2.py  lane_pb2.py  map.pb.cc  map.pb.h  map_pb2.py  object.pb.cc  object.pb.h  object_pb2.py  road.pb.cc  road.pb.h  road_pb2.py  section.pb.cc  section.pb.h  section_pb2.py  tile.pb.cc  tile.pb.h  tile_pb2.py  traffic_light.pb.h  traffic_light_pb2.py  traffic_sign.pb.h  traffic_sign_pb2.py
map_param/proto/raw/: lane.proto  lane_marking.proto  map.proto  object.proto  road.proto  section.proto  tile.proto  traffic_light.proto
map_param/raw/: attribute.proto  geometry.proto  id.proto  lane.proto  lane_marking.proto  map.proto  object.proto  parking_space.proto  readme  section.proto  tile.proto  traffic_light.proto  traffic_sign.proto
map_param/src/: MapParam_HDmap_IO.cc
map_param/test/: CMakeLists.txt  gtest_main.cc  main.cc
plugins/: CMakePluginTpl.cmake
qCC/: CMakeLists.txt  ccCommon.h  ccEntityAction.cpp  ccOverlayDialog.cpp  ccPickingHub.cpp  ccTracePolylineTool.cpp  ccTracePolylineTool.h  dpxAttributeEditDlg.cpp  dpxAttributeEditDlg.h  dpxAutoCreateMapSetting.cpp  dpxAutoCreateMapSetting.h  dpxDataPretreatDlg.cpp  dpxDataPretreatDlg.h  dpxVisibleSetting.cpp  dpxVisibleSetting.h  icones.qrc  main.cpp  mainwindow.cpp  mainwindow.h  qCC.pro
(+110 files in other folders)
